--- a/public/css/policyms-public.css
+++ b/public/css/policyms-public.css
@@ -17,7 +17,7 @@
   --policyms-text-color-invert: #f0f0f0;
   --policyms-text-color-invert-secondary: #c2c2c2;
   --policyms-highlight-color-dark: #03204a;
-  --policyms-highlight-color-mid: #005cf9;
+  --policyms-highlight-color-mid: #3b82fd;
   --policyms-highlight-color-light: #00bdf5;
   --policyms-border-color-light: rgba(0, 0, 0, 0.1);
   --policyms-background-color: rgba(253, 253, 253);
@@ -27,8 +27,9 @@
   --policyms-background-failure-outline: #e73d3d;
   --policyms-background-warning: #fffce8;
   --policyms-background-warning-outline: #dfaf2b;
-  --policyms-background-success: var(--policyms-highlight-color-light);
-  --policyms-background-success-outline: var(--policyms-highlight-color-light);
+  --policyms-star-color: #dfaf2b;
+  --policyms-background-success: #cdf7bf;
+  --policyms-background-success-outline: #358d18;
 }
 
 /* Links & buttons */
@@ -45,6 +46,10 @@
   font-weight: bold;
   color: var(--policyms-text-color);
   transition: color 0.2s ease-in-out;
+}
+
+.policyms button {
+  font-weight: normal;
 }
 
 .policyms a.underline {
@@ -66,8 +71,8 @@
   border-radius: 8px;
   background: var(--policyms-background-notice) !important;
   color: var(--policyms-text-color-invert) !important;
-  font-weight: 500;
   transition: all 0.2s ease-in-out;
+  font-weight: 500;
 }
 
 .policyms button.action.minimal {
@@ -118,16 +123,20 @@
 .policyms button.tactile,
 .policyms a.tactile {
   display: block;
-  width: 100%;
   text-align: left;
   background-color: transparent !important;
-  padding: 10px 0 10px 8px;
+  padding: 10px 8px;
   margin: 3px 0;
   color: inherit !important;
   border: none;
   border-radius: 8px;
   text-transform: none;
   transition: all 0.2s ease-in-out;
+}
+
+.policyms button.tactile.destructive,
+.policyms a.tactile.destructive {
+  color: var(--policyms-background-failure) !important;
 }
 
 .policyms button.tactile:hover,
@@ -148,7 +157,7 @@
 }
 
 .policyms button.outlined {
-  padding: 4px 8px;
+  padding: 4px 16px;
   margin: 0 5px 5px 0;
   background: transparent !important;
   font-size: 100%;
@@ -218,6 +227,13 @@
   line-height: 1.3em;
 }
 
+.policyms p.discreet {
+  margin: 0;
+  padding: 0;
+  font-size: 80%;
+  color: var(--policyms-text-color-secondary);
+}
+
 .policyms span.label {
   background-color: var(--policyms-background-notice);
   border-radius: 100px;
@@ -266,6 +282,11 @@
 .policyms nav.pagination button.active {
   font-weight: bold;
   background: rgba(0, 0, 0, 0.05) !important;
+}
+
+.policyms *[status="approved"] {
+  background-color: var(--policyms-background-success);
+  color: var(--policyms-background-success-outline);
 }
 
 /**
@@ -345,6 +366,10 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+}
+
+.policyms form .actions.align-end {
+  justify-content: flex-end;
 }
 
 .policyms form .actions button {
