--- a/public/css/policyms-public-accounts.css
+++ b/public/css/policyms-public-accounts.css
@@ -15,16 +15,11 @@
 */
 
 .policyms-oauth-buttons {
-  padding: 20px;
-  border: 1px solid var(--policyms-border-color-light);
-  margin-bottom: 20px;
+  padding: 10px 0px;
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
-}
-
-.policyms-oauth-buttons button {
-  width: auto;
-  margin-right: 8px;
 }
 
 #google-signin,
@@ -37,16 +32,28 @@
   margin: 0 !important;
 }
 
-button[data-action="show-keycloak-modal"] {
+.policyms-oauth-buttons button {
+  margin-bottom: 10px;
+  padding: 10px 14px 9px 10px !important;
+  font-weight: 600;
+  font-size: 11.5pt;
+  width: 100%;
+  max-width: 400px;
+}
+
+.policyms-oauth-buttons button[data-action="show-keycloak-modal"] {
   display: inline-block;
-  padding: 6.5px 10px !important;
   border: none !important;
-  background-color: rgb(35, 36, 39) !important;
-  font-weight: bold;
+  background: rgb(99, 156, 255) !important;
+  background: linear-gradient(
+    307deg,
+    rgba(99, 156, 255, 1) 0%,
+    rgba(53, 112, 214, 1) 99%
+  ) !important;
   border-radius: 4px !important;
 }
 
-button[data-action="show-keycloak-modal"]::before {
+.policyms-oauth-buttons button[data-action="show-keycloak-modal"]::before {
   content: " ";
   display: inline-block;
   width: 28px;
@@ -58,19 +65,19 @@ button[data-action="show-keycloak-modal"]::before {
   background-repeat: no-repeat;
 }
 
-button[data-action="policyms-redirect-egi"] {
+.policyms-oauth-buttons button[data-action="policyms-redirect-egi"] {
   display: inline-block;
-  display: inline-block;
-  padding: 6.5px 10px !important;
-  border: 1px solid !important;
-  background-color: rgb(35, 36, 39) !important;
-  color: white;
-  font-size: var(--btnFs, var(--bodyFontSize));
-  font-weight: bold;
+  background: rgb(255, 127, 0) !important;
+  background: rgb(255, 90, 6) !important;
+  background: linear-gradient(
+    54deg,
+    rgba(255, 90, 6, 1) 0%,
+    rgba(255, 127, 0, 1) 99%
+  ) !important;
   border-radius: 4px !important;
 }
 
-button[data-action="policyms-redirect-egi"]::before {
+.policyms-oauth-buttons button[data-action="policyms-redirect-egi"]::before {
   content: " ";
   display: inline-block;
   width: 32px;
@@ -83,6 +90,44 @@ button[data-action="policyms-redirect-egi"]::before {
   background-repeat: no-repeat;
 }
 
+.policyms .sso-divider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.policyms .sso-divider > span {
+  display: block;
+  margin: 0 10px;
+  font-size: 10pt;
+  color: var(--policyms-text-color-secondary);
+}
+
+/*
+*
+* Authentication
+* ---------------------
+*
+* These are the styles for the 
+* [policyms-authentication] shortcode.
+*
+*/
+
+.policyms-user-authentication {
+  max-width: 600px;
+}
+
+.policyms-user-authentication > p {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.policyms-password-reset form {
+  max-width: 600px;
+  margin: 20px 0;
+}
+
 /*
 *
 * Registration
@@ -92,6 +137,10 @@ button[data-action="policyms-redirect-egi"]::before {
 * [policyms-registration] shortcode.
 *
 */
+
+.policyms-user-registration {
+  max-width: 600px;
+}
 
 .policyms-user-registration > form > .tos-agree {
   display: flex;
