--- a/public/css/policyms-public.css
+++ b/public/css/policyms-public.css
@@ -96,6 +96,7 @@
   color: var(--policyms-text-color) !important;
   font-weight: 500;
   transition: all 0.2s ease-in-out;
+  box-shadow: none;
 }
 
 .policyms button.action.destructive {
@@ -126,6 +127,11 @@
   transform: scale(0.97);
   box-shadow: 0 1px 0px rgba(0, 0, 0, 0.3);
   transition: all 0.1s ease-in-out;
+}
+
+.policyms button.action.minimal:hover,
+.policyms button.action.minimal:active {
+  box-shadow: none;
 }
 
 .policyms .loading {
