--- a/public/css/policyms-public.css
+++ b/public/css/policyms-public.css
@@ -248,6 +248,7 @@
     rgba(255, 255, 255, 0) 99%
   );
   border-radius: 100px !important;
+  transition: all 0.2s;
 }
 
 .policyms button.pill:hover {
